// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cache Redux Nodes sanity checks 1`] = `
Map {
  "SitePage /dev-404-page/" => Object {
    "children": Array [],
    "id": "SitePage /dev-404-page/",
    "internal": Object {
      "contentDigest": "f91d29e10ba680b413138cf9ed86e655",
      "owner": "internal-data-bridge",
      "type": "SitePage",
    },
    "parent": null,
    "path": "/dev-404-page/",
  },
  "d48d1c52-fe48-53cb-8f08-aa4b47dde5a5" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "d48d1c52-fe48-53cb-8f08-aa4b47dde5a5",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "dev-404-page",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/dev-404-page",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/dev-404-page",
    "ssrAPIs": Array [],
  },
  "1fc32581-893a-55e8-8927-bcd667e2b700" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "1fc32581-893a-55e8-8927-bcd667e2b700",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "load-babel-config",
    "nodeAPIs": Array [
      "onPreBootstrap",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/load-babel-config",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/load-babel-config",
    "ssrAPIs": Array [],
  },
  "a5079d69-ba80-53dc-82f9-0f440bd5448c" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "a5079d69-ba80-53dc-82f9-0f440bd5448c",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "internal-data-bridge",
    "nodeAPIs": Array [
      "sourceNodes",
      "onCreatePage",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/internal-data-bridge",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/internal-data-bridge",
    "ssrAPIs": Array [],
  },
  "f795702c-a3b8-5a88-88ee-5d06019d44fa" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "f795702c-a3b8-5a88-88ee-5d06019d44fa",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "prod-404",
    "nodeAPIs": Array [
      "onCreatePage",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/prod-404",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/prod-404",
    "ssrAPIs": Array [],
  },
  "6f4b2fa9-66b5-5205-a03f-140005a2cfe5" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "6f4b2fa9-66b5-5205-a03f-140005a2cfe5",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "webpack-theme-component-shadowing",
    "nodeAPIs": Array [
      "onCreateWebpackConfig",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/webpack-theme-component-shadowing",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/webpack-theme-component-shadowing",
    "ssrAPIs": Array [],
  },
  "3eaaf673-5a13-5784-894a-47b357425e05" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "3eaaf673-5a13-5784-894a-47b357425e05",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-stable",
    "nodeAPIs": Array [
      "sourceNodes",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/plugins/gatsby-plugin-stable",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/plugins/gatsby-plugin-stable",
    "ssrAPIs": Array [],
  },
  "dc1f3dc9-7d73-533d-a090-787d5281f836" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "dc1f3dc9-7d73-533d-a090-787d5281f836",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-independent-node",
    "nodeAPIs": Array [
      "sourceNodes",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/plugins/gatsby-plugin-independent-node",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/plugins/gatsby-plugin-independent-node",
    "ssrAPIs": Array [],
  },
  "624fa626-4203-5aab-a667-ee4ffa1dee80" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "624fa626-4203-5aab-a667-ee4ffa1dee80",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-source-parent-change-for-transformer",
    "nodeAPIs": Array [
      "sourceNodes",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/plugins/gatsby-source-parent-change-for-transformer",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/plugins/gatsby-source-parent-change-for-transformer",
    "ssrAPIs": Array [],
  },
  "684f3e1c-cb9e-5123-87b1-609e60d5fa87" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "684f3e1c-cb9e-5123-87b1-609e60d5fa87",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-transformer-parent-change",
    "nodeAPIs": Array [
      "onCreateNode",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/plugins/gatsby-transformer-parent-change",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/plugins/gatsby-transformer-parent-change",
    "ssrAPIs": Array [],
  },
  "08cd7b14-7698-5764-8775-c58ce54c44e8" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "08cd7b14-7698-5764-8775-c58ce54c44e8",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-source-child-change-for-transformer",
    "nodeAPIs": Array [
      "sourceNodes",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/plugins/gatsby-source-child-change-for-transformer",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/plugins/gatsby-source-child-change-for-transformer",
    "ssrAPIs": Array [],
  },
  "2bf51669-f85f-59be-94db-6056fd4b04a3" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "2bf51669-f85f-59be-94db-6056fd4b04a3",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-transformer-child-change",
    "nodeAPIs": Array [
      "onCreateNode",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/plugins/gatsby-transformer-child-change",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/plugins/gatsby-transformer-child-change",
    "ssrAPIs": Array [],
  },
  "5ae5dfed-66db-553c-a695-6d88233de8c7" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "5ae5dfed-66db-553c-a695-6d88233de8c7",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-source-parent-change-for-fields",
    "nodeAPIs": Array [
      "sourceNodes",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/plugins/gatsby-source-parent-change-for-fields",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/plugins/gatsby-source-parent-change-for-fields",
    "ssrAPIs": Array [],
  },
  "58820269-9021-5c79-80f5-35381958161b" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "58820269-9021-5c79-80f5-35381958161b",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-fields-parent-change",
    "nodeAPIs": Array [
      "onCreateNode",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/plugins/gatsby-fields-parent-change",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/plugins/gatsby-fields-parent-change",
    "ssrAPIs": Array [],
  },
  "c56df8b2-d14d-5334-9f93-79f3654e01fe" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "c56df8b2-d14d-5334-9f93-79f3654e01fe",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-source-child-change-for-fields",
    "nodeAPIs": Array [
      "sourceNodes",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/plugins/gatsby-source-child-change-for-fields",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/plugins/gatsby-source-child-change-for-fields",
    "ssrAPIs": Array [],
  },
  "9beb7309-19ee-512e-8ea5-bf15934ed192" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "9beb7309-19ee-512e-8ea5-bf15934ed192",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-fields-child-change",
    "nodeAPIs": Array [
      "onCreateNode",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/plugins/gatsby-fields-child-change",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/plugins/gatsby-fields-child-change",
    "ssrAPIs": Array [],
  },
  "d54d4b0b-70e3-57f0-b8bd-26362ecfbbe3" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "d54d4b0b-70e3-57f0-b8bd-26362ecfbbe3",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/dev-404-page/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "bfbac0d5-64bb-5c66-9ee6-9fe758667e97" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "bfbac0d5-64bb-5c66-9ee6-9fe758667e97",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/load-babel-config/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "69fff652-b43a-5034-bf55-fe168947a840" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "69fff652-b43a-5034-bf55-fe168947a840",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/internal-data-bridge/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "c4de7c9a-8e52-5faa-a049-c02e5225bb4b" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "c4de7c9a-8e52-5faa-a049-c02e5225bb4b",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/prod-404/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "dbb34a29-961c-5105-999f-4f8cc7da475a" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "dbb34a29-961c-5105-999f-4f8cc7da475a",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/webpack-theme-component-shadowing/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "408366c7-0931-5fa4-98a2-7ed52514a903" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "408366c7-0931-5fa4-98a2-7ed52514a903",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/plugins/gatsby-plugin-stable/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "f3bf6f76-a015-5178-a2ae-d14ee8f83d77" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "f3bf6f76-a015-5178-a2ae-d14ee8f83d77",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/plugins/gatsby-plugin-independent-node/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "11301e34-63dd-5f55-be40-6f6f3e42deae" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "11301e34-63dd-5f55-be40-6f6f3e42deae",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/plugins/gatsby-source-parent-change-for-transformer/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "ff1876f4-aa5b-58a6-ad0b-84a9f8bb673a" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "ff1876f4-aa5b-58a6-ad0b-84a9f8bb673a",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/plugins/gatsby-transformer-parent-change/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "fe2aaed8-1020-5272-8d64-08ea72a5aea1" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "fe2aaed8-1020-5272-8d64-08ea72a5aea1",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/plugins/gatsby-source-child-change-for-transformer/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "d7da1f41-8df5-51b6-8486-2b93e13d5e15" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "d7da1f41-8df5-51b6-8486-2b93e13d5e15",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/plugins/gatsby-transformer-child-change/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "f1e8c9ec-44c4-528e-8600-9dbf2c1f3c8b" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "f1e8c9ec-44c4-528e-8600-9dbf2c1f3c8b",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/plugins/gatsby-source-parent-change-for-fields/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "67f79f09-33af-51bb-b6c4-b528662561a2" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "67f79f09-33af-51bb-b6c4-b528662561a2",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/plugins/gatsby-fields-parent-change/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "5b04593e-7bbd-5478-8de9-a6a15d742524" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "5b04593e-7bbd-5478-8de9-a6a15d742524",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/plugins/gatsby-source-child-change-for-fields/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "4ea4b5cf-2cad-599a-a805-ed20f20be17a" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "4ea4b5cf-2cad-599a-a805-ed20f20be17a",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/plugins/gatsby-fields-child-change/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "7374ebf2-d961-52ee-92a2-c25e7cb387a9" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "7374ebf2-d961-52ee-92a2-c25e7cb387a9",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "default-site-plugin",
    "nodeAPIs": Array [
      "onPreBootstrap",
      "onPostBootstrap",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>",
    "ssrAPIs": Array [],
  },
  "b9a44867-c35c-5ccb-bf12-af5de86cf116" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "b9a44867-c35c-5ccb-bf12-af5de86cf116",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "Site" => Object {
    "children": Array [],
    "host": undefined,
    "id": "Site",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "Site",
    },
    "parent": null,
    "pathPrefix": "",
    "polyfill": true,
    "port": undefined,
    "siteMetadata": Object {},
  },
  "STABLE_NODE_1" => Object {
    "children": Array [],
    "foo": "bar",
    "id": "STABLE_NODE_1",
    "internal": Object {
      "contentDigest": "0",
      "owner": "gatsby-plugin-stable",
      "type": "IndependentStable",
    },
    "parent": null,
  },
  "INDEPENDENT_NODE_1" => Object {
    "children": Array [],
    "foo": "bar",
    "id": "INDEPENDENT_NODE_1",
    "internal": Object {
      "contentDigest": "0",
      "owner": "gatsby-plugin-independent-node",
      "type": "IndependentChanging",
    },
    "parent": null,
  },
  "parent_parentChangeForTransformer" => Object {
    "children": Array [
      "2131d29a-296c-5f73-affc-e422bec644fe",
    ],
    "foo": "run-1",
    "id": "parent_parentChangeForTransformer",
    "internal": Object {
      "contentDigest": "a032c69550f5567021eda97cc3a1faf2",
      "owner": "gatsby-source-parent-change-for-transformer",
      "type": "Parent_ParentChangeForTransformer",
    },
    "parent": null,
  },
  "2131d29a-296c-5f73-affc-e422bec644fe" => Object {
    "bar": undefined,
    "children": Array [],
    "foo": "run-1",
    "id": "2131d29a-296c-5f73-affc-e422bec644fe",
    "internal": Object {
      "contentDigest": "cbc07ead8c18c9d616f0004a893d5cf3",
      "owner": "gatsby-transformer-parent-change",
      "type": "ChildOfParent_ParentChangeForTransformer",
    },
    "parent": "parent_parentChangeForTransformer",
  },
  "parent_childChangeForTransformer" => Object {
    "children": Array [
      "3b0c942e-b51f-587b-b37d-b36c5e9af8fa",
    ],
    "foo": "run-1",
    "id": "parent_childChangeForTransformer",
    "internal": Object {
      "contentDigest": "25f73a6d69ce857a76e0a2cdbc186975",
      "owner": "gatsby-source-child-change-for-transformer",
      "type": "Parent_ChildChangeForTransformer",
    },
    "parent": null,
  },
  "3b0c942e-b51f-587b-b37d-b36c5e9af8fa" => Object {
    "children": Array [],
    "foo": "bar",
    "id": "3b0c942e-b51f-587b-b37d-b36c5e9af8fa",
    "internal": Object {
      "contentDigest": "59b3a74325cbf2001bc21eb662f1e297",
      "owner": "gatsby-transformer-child-change",
      "type": "ChildOfParent_ChildChangeForTransformer",
    },
    "parent": "parent_childChangeForTransformer",
  },
  "parent_parentChangeForFields" => Object {
    "children": Array [],
    "fields": Object {
      "bar": undefined,
      "foo": "run-1",
    },
    "foo": "run-1",
    "id": "parent_parentChangeForFields",
    "internal": Object {
      "contentDigest": "ad237cf525f0ccb39ea0ba07165d4119",
      "fieldOwners": Object {
        "bar": "gatsby-fields-parent-change",
        "foo": "gatsby-fields-parent-change",
      },
      "owner": "gatsby-source-parent-change-for-fields",
      "type": "Parent_ParentChangeForFields",
    },
    "parent": null,
  },
  "parent_childChangeForFields" => Object {
    "children": Array [],
    "fields": Object {
      "foo1": "bar",
    },
    "foo": "run-1",
    "id": "parent_childChangeForFields",
    "internal": Object {
      "contentDigest": "893740bfde4b8a6039e939cb0290d626",
      "fieldOwners": Object {
        "foo1": "gatsby-fields-child-change",
      },
      "owner": "gatsby-source-child-change-for-fields",
      "type": "Parent_ChildChangeForFields",
    },
    "parent": null,
  },
  "SitePage /" => Object {
    "children": Array [],
    "component": "<PROJECT_ROOT>/src/pages/index.js",
    "componentChunkName": "component---src-pages-index-js",
    "componentPath": "<PROJECT_ROOT>/src/pages/index.js",
    "context": Object {},
    "id": "SitePage /",
    "internal": Object {
      "contentDigest": "c5fa7d67d7b6095c8133348eb329bd52",
      "description": "c9535749-a52b-5c49-8671-11a311b98993",
      "owner": "internal-data-bridge",
      "type": "SitePage",
    },
    "internalComponentName": "ComponentIndex",
    "isCreatedByStatefulCreatePages": true,
    "matchPath": undefined,
    "parent": null,
    "path": "/",
    "pluginCreatorId": "c9535749-a52b-5c49-8671-11a311b98993",
    "pluginCreator___NODE": "c9535749-a52b-5c49-8671-11a311b98993",
  },
}
`;

exports[`Cache Redux Nodes sanity checks 2`] = `
Map {
  "SitePage /dev-404-page/" => Object {
    "children": Array [],
    "id": "SitePage /dev-404-page/",
    "internal": Object {
      "contentDigest": "f91d29e10ba680b413138cf9ed86e655",
      "owner": "internal-data-bridge",
      "type": "SitePage",
    },
    "parent": null,
    "path": "/dev-404-page/",
  },
  "d48d1c52-fe48-53cb-8f08-aa4b47dde5a5" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "d48d1c52-fe48-53cb-8f08-aa4b47dde5a5",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "dev-404-page",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/dev-404-page",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/dev-404-page",
    "ssrAPIs": Array [],
  },
  "1fc32581-893a-55e8-8927-bcd667e2b700" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "1fc32581-893a-55e8-8927-bcd667e2b700",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "load-babel-config",
    "nodeAPIs": Array [
      "onPreBootstrap",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/load-babel-config",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/load-babel-config",
    "ssrAPIs": Array [],
  },
  "a5079d69-ba80-53dc-82f9-0f440bd5448c" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "a5079d69-ba80-53dc-82f9-0f440bd5448c",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "internal-data-bridge",
    "nodeAPIs": Array [
      "sourceNodes",
      "onCreatePage",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/internal-data-bridge",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/internal-data-bridge",
    "ssrAPIs": Array [],
  },
  "f795702c-a3b8-5a88-88ee-5d06019d44fa" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "f795702c-a3b8-5a88-88ee-5d06019d44fa",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "prod-404",
    "nodeAPIs": Array [
      "onCreatePage",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/prod-404",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/prod-404",
    "ssrAPIs": Array [],
  },
  "6f4b2fa9-66b5-5205-a03f-140005a2cfe5" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "6f4b2fa9-66b5-5205-a03f-140005a2cfe5",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "webpack-theme-component-shadowing",
    "nodeAPIs": Array [
      "onCreateWebpackConfig",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/webpack-theme-component-shadowing",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/webpack-theme-component-shadowing",
    "ssrAPIs": Array [],
  },
  "3eaaf673-5a13-5784-894a-47b357425e05" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "3eaaf673-5a13-5784-894a-47b357425e05",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-stable",
    "nodeAPIs": Array [
      "sourceNodes",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/plugins/gatsby-plugin-stable",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/plugins/gatsby-plugin-stable",
    "ssrAPIs": Array [],
  },
  "dc1f3dc9-7d73-533d-a090-787d5281f836" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "dc1f3dc9-7d73-533d-a090-787d5281f836",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-independent-node",
    "nodeAPIs": Array [
      "sourceNodes",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/plugins/gatsby-plugin-independent-node",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/plugins/gatsby-plugin-independent-node",
    "ssrAPIs": Array [],
  },
  "624fa626-4203-5aab-a667-ee4ffa1dee80" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "624fa626-4203-5aab-a667-ee4ffa1dee80",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-source-parent-change-for-transformer",
    "nodeAPIs": Array [
      "sourceNodes",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/plugins/gatsby-source-parent-change-for-transformer",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/plugins/gatsby-source-parent-change-for-transformer",
    "ssrAPIs": Array [],
  },
  "684f3e1c-cb9e-5123-87b1-609e60d5fa87" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "684f3e1c-cb9e-5123-87b1-609e60d5fa87",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-transformer-parent-change",
    "nodeAPIs": Array [
      "onCreateNode",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/plugins/gatsby-transformer-parent-change",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/plugins/gatsby-transformer-parent-change",
    "ssrAPIs": Array [],
  },
  "08cd7b14-7698-5764-8775-c58ce54c44e8" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "08cd7b14-7698-5764-8775-c58ce54c44e8",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-source-child-change-for-transformer",
    "nodeAPIs": Array [
      "sourceNodes",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/plugins/gatsby-source-child-change-for-transformer",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/plugins/gatsby-source-child-change-for-transformer",
    "ssrAPIs": Array [],
  },
  "2bf51669-f85f-59be-94db-6056fd4b04a3" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "2bf51669-f85f-59be-94db-6056fd4b04a3",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-transformer-child-change",
    "nodeAPIs": Array [
      "onCreateNode",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/plugins/gatsby-transformer-child-change",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/plugins/gatsby-transformer-child-change",
    "ssrAPIs": Array [],
  },
  "5ae5dfed-66db-553c-a695-6d88233de8c7" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "5ae5dfed-66db-553c-a695-6d88233de8c7",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-source-parent-change-for-fields",
    "nodeAPIs": Array [
      "sourceNodes",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/plugins/gatsby-source-parent-change-for-fields",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/plugins/gatsby-source-parent-change-for-fields",
    "ssrAPIs": Array [],
  },
  "58820269-9021-5c79-80f5-35381958161b" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "58820269-9021-5c79-80f5-35381958161b",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-fields-parent-change",
    "nodeAPIs": Array [
      "onCreateNode",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/plugins/gatsby-fields-parent-change",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/plugins/gatsby-fields-parent-change",
    "ssrAPIs": Array [],
  },
  "c56df8b2-d14d-5334-9f93-79f3654e01fe" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "c56df8b2-d14d-5334-9f93-79f3654e01fe",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-source-child-change-for-fields",
    "nodeAPIs": Array [
      "sourceNodes",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/plugins/gatsby-source-child-change-for-fields",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/plugins/gatsby-source-child-change-for-fields",
    "ssrAPIs": Array [],
  },
  "9beb7309-19ee-512e-8ea5-bf15934ed192" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "9beb7309-19ee-512e-8ea5-bf15934ed192",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-fields-child-change",
    "nodeAPIs": Array [
      "onCreateNode",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/plugins/gatsby-fields-child-change",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/plugins/gatsby-fields-child-change",
    "ssrAPIs": Array [],
  },
  "d54d4b0b-70e3-57f0-b8bd-26362ecfbbe3" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "d54d4b0b-70e3-57f0-b8bd-26362ecfbbe3",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/dev-404-page/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "bfbac0d5-64bb-5c66-9ee6-9fe758667e97" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "bfbac0d5-64bb-5c66-9ee6-9fe758667e97",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/load-babel-config/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "69fff652-b43a-5034-bf55-fe168947a840" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "69fff652-b43a-5034-bf55-fe168947a840",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/internal-data-bridge/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "c4de7c9a-8e52-5faa-a049-c02e5225bb4b" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "c4de7c9a-8e52-5faa-a049-c02e5225bb4b",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/prod-404/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "dbb34a29-961c-5105-999f-4f8cc7da475a" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "dbb34a29-961c-5105-999f-4f8cc7da475a",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/webpack-theme-component-shadowing/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "408366c7-0931-5fa4-98a2-7ed52514a903" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "408366c7-0931-5fa4-98a2-7ed52514a903",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/plugins/gatsby-plugin-stable/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "f3bf6f76-a015-5178-a2ae-d14ee8f83d77" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "f3bf6f76-a015-5178-a2ae-d14ee8f83d77",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/plugins/gatsby-plugin-independent-node/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "11301e34-63dd-5f55-be40-6f6f3e42deae" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "11301e34-63dd-5f55-be40-6f6f3e42deae",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/plugins/gatsby-source-parent-change-for-transformer/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "ff1876f4-aa5b-58a6-ad0b-84a9f8bb673a" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "ff1876f4-aa5b-58a6-ad0b-84a9f8bb673a",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/plugins/gatsby-transformer-parent-change/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "fe2aaed8-1020-5272-8d64-08ea72a5aea1" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "fe2aaed8-1020-5272-8d64-08ea72a5aea1",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/plugins/gatsby-source-child-change-for-transformer/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "d7da1f41-8df5-51b6-8486-2b93e13d5e15" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "d7da1f41-8df5-51b6-8486-2b93e13d5e15",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/plugins/gatsby-transformer-child-change/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "f1e8c9ec-44c4-528e-8600-9dbf2c1f3c8b" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "f1e8c9ec-44c4-528e-8600-9dbf2c1f3c8b",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/plugins/gatsby-source-parent-change-for-fields/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "67f79f09-33af-51bb-b6c4-b528662561a2" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "67f79f09-33af-51bb-b6c4-b528662561a2",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/plugins/gatsby-fields-parent-change/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "5b04593e-7bbd-5478-8de9-a6a15d742524" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "5b04593e-7bbd-5478-8de9-a6a15d742524",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/plugins/gatsby-source-child-change-for-fields/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "4ea4b5cf-2cad-599a-a805-ed20f20be17a" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "4ea4b5cf-2cad-599a-a805-ed20f20be17a",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/plugins/gatsby-fields-child-change/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "7374ebf2-d961-52ee-92a2-c25e7cb387a9" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "7374ebf2-d961-52ee-92a2-c25e7cb387a9",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "default-site-plugin",
    "nodeAPIs": Array [
      "onPreBootstrap",
      "onPostBootstrap",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>",
    "ssrAPIs": Array [],
  },
  "b9a44867-c35c-5ccb-bf12-af5de86cf116" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "b9a44867-c35c-5ccb-bf12-af5de86cf116",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "Site" => Object {
    "children": Array [],
    "host": undefined,
    "id": "Site",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "Site",
    },
    "parent": null,
    "pathPrefix": "",
    "polyfill": true,
    "port": undefined,
    "siteMetadata": Object {},
  },
  "STABLE_NODE_1" => Object {
    "children": Array [],
    "foo": "bar",
    "id": "STABLE_NODE_1",
    "internal": Object {
      "contentDigest": "0",
      "owner": "gatsby-plugin-stable",
      "type": "IndependentStable",
    },
    "parent": null,
  },
  "parent_childChangeForTransformer" => Object {
    "children": Array [],
    "foo": "run-1",
    "id": "parent_childChangeForTransformer",
    "internal": Object {
      "contentDigest": "25f73a6d69ce857a76e0a2cdbc186975",
      "owner": "gatsby-source-child-change-for-transformer",
      "type": "Parent_ChildChangeForTransformer",
    },
    "parent": null,
  },
  "parent_childChangeForFields" => Object {
    "children": Array [],
    "fields": Object {},
    "foo": "run-1",
    "id": "parent_childChangeForFields",
    "internal": Object {
      "contentDigest": "893740bfde4b8a6039e939cb0290d626",
      "fieldOwners": Object {},
      "owner": "gatsby-source-child-change-for-fields",
      "type": "Parent_ChildChangeForFields",
    },
    "parent": null,
  },
  "SitePage /" => Object {
    "children": Array [],
    "component": "<PROJECT_ROOT>/src/pages/index.js",
    "componentChunkName": "component---src-pages-index-js",
    "componentPath": "<PROJECT_ROOT>/src/pages/index.js",
    "context": Object {},
    "id": "SitePage /",
    "internal": Object {
      "contentDigest": "c5fa7d67d7b6095c8133348eb329bd52",
      "description": "c9535749-a52b-5c49-8671-11a311b98993",
      "owner": "internal-data-bridge",
      "type": "SitePage",
    },
    "internalComponentName": "ComponentIndex",
    "isCreatedByStatefulCreatePages": true,
    "matchPath": undefined,
    "parent": null,
    "path": "/",
    "pluginCreatorId": "c9535749-a52b-5c49-8671-11a311b98993",
    "pluginCreator___NODE": "c9535749-a52b-5c49-8671-11a311b98993",
  },
}
`;

exports[`Cache Redux Nodes sanity checks 3`] = `
Map {
  "SitePage /dev-404-page/" => Object {
    "children": Array [],
    "id": "SitePage /dev-404-page/",
    "internal": Object {
      "contentDigest": "f91d29e10ba680b413138cf9ed86e655",
      "owner": "internal-data-bridge",
      "type": "SitePage",
    },
    "parent": null,
    "path": "/dev-404-page/",
  },
  "d48d1c52-fe48-53cb-8f08-aa4b47dde5a5" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "d48d1c52-fe48-53cb-8f08-aa4b47dde5a5",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "dev-404-page",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/dev-404-page",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/dev-404-page",
    "ssrAPIs": Array [],
  },
  "1fc32581-893a-55e8-8927-bcd667e2b700" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "1fc32581-893a-55e8-8927-bcd667e2b700",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "load-babel-config",
    "nodeAPIs": Array [
      "onPreBootstrap",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/load-babel-config",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/load-babel-config",
    "ssrAPIs": Array [],
  },
  "a5079d69-ba80-53dc-82f9-0f440bd5448c" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "a5079d69-ba80-53dc-82f9-0f440bd5448c",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "internal-data-bridge",
    "nodeAPIs": Array [
      "sourceNodes",
      "onCreatePage",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/internal-data-bridge",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/internal-data-bridge",
    "ssrAPIs": Array [],
  },
  "f795702c-a3b8-5a88-88ee-5d06019d44fa" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "f795702c-a3b8-5a88-88ee-5d06019d44fa",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "prod-404",
    "nodeAPIs": Array [
      "onCreatePage",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/prod-404",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/prod-404",
    "ssrAPIs": Array [],
  },
  "6f4b2fa9-66b5-5205-a03f-140005a2cfe5" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "6f4b2fa9-66b5-5205-a03f-140005a2cfe5",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "webpack-theme-component-shadowing",
    "nodeAPIs": Array [
      "onCreateWebpackConfig",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/webpack-theme-component-shadowing",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/webpack-theme-component-shadowing",
    "ssrAPIs": Array [],
  },
  "3eaaf673-5a13-5784-894a-47b357425e05" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "3eaaf673-5a13-5784-894a-47b357425e05",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-stable",
    "nodeAPIs": Array [
      "sourceNodes",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/plugins/gatsby-plugin-stable",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/plugins/gatsby-plugin-stable",
    "ssrAPIs": Array [],
  },
  "dc1f3dc9-7d73-533d-a090-787d5281f836" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "dc1f3dc9-7d73-533d-a090-787d5281f836",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-independent-node",
    "nodeAPIs": Array [
      "sourceNodes",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/plugins/gatsby-plugin-independent-node",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/plugins/gatsby-plugin-independent-node",
    "ssrAPIs": Array [],
  },
  "624fa626-4203-5aab-a667-ee4ffa1dee80" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "624fa626-4203-5aab-a667-ee4ffa1dee80",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-source-parent-change-for-transformer",
    "nodeAPIs": Array [
      "sourceNodes",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/plugins/gatsby-source-parent-change-for-transformer",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/plugins/gatsby-source-parent-change-for-transformer",
    "ssrAPIs": Array [],
  },
  "684f3e1c-cb9e-5123-87b1-609e60d5fa87" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "684f3e1c-cb9e-5123-87b1-609e60d5fa87",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-transformer-parent-change",
    "nodeAPIs": Array [
      "onCreateNode",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/plugins/gatsby-transformer-parent-change",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/plugins/gatsby-transformer-parent-change",
    "ssrAPIs": Array [],
  },
  "08cd7b14-7698-5764-8775-c58ce54c44e8" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "08cd7b14-7698-5764-8775-c58ce54c44e8",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-source-child-change-for-transformer",
    "nodeAPIs": Array [
      "sourceNodes",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/plugins/gatsby-source-child-change-for-transformer",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/plugins/gatsby-source-child-change-for-transformer",
    "ssrAPIs": Array [],
  },
  "2bf51669-f85f-59be-94db-6056fd4b04a3" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "2bf51669-f85f-59be-94db-6056fd4b04a3",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-transformer-child-change",
    "nodeAPIs": Array [
      "onCreateNode",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/plugins/gatsby-transformer-child-change",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/plugins/gatsby-transformer-child-change",
    "ssrAPIs": Array [],
  },
  "5ae5dfed-66db-553c-a695-6d88233de8c7" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "5ae5dfed-66db-553c-a695-6d88233de8c7",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-source-parent-change-for-fields",
    "nodeAPIs": Array [
      "sourceNodes",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/plugins/gatsby-source-parent-change-for-fields",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/plugins/gatsby-source-parent-change-for-fields",
    "ssrAPIs": Array [],
  },
  "58820269-9021-5c79-80f5-35381958161b" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "58820269-9021-5c79-80f5-35381958161b",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-fields-parent-change",
    "nodeAPIs": Array [
      "onCreateNode",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/plugins/gatsby-fields-parent-change",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/plugins/gatsby-fields-parent-change",
    "ssrAPIs": Array [],
  },
  "c56df8b2-d14d-5334-9f93-79f3654e01fe" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "c56df8b2-d14d-5334-9f93-79f3654e01fe",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-source-child-change-for-fields",
    "nodeAPIs": Array [
      "sourceNodes",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/plugins/gatsby-source-child-change-for-fields",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/plugins/gatsby-source-child-change-for-fields",
    "ssrAPIs": Array [],
  },
  "9beb7309-19ee-512e-8ea5-bf15934ed192" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "9beb7309-19ee-512e-8ea5-bf15934ed192",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-fields-child-change",
    "nodeAPIs": Array [
      "onCreateNode",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/plugins/gatsby-fields-child-change",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/plugins/gatsby-fields-child-change",
    "ssrAPIs": Array [],
  },
  "d54d4b0b-70e3-57f0-b8bd-26362ecfbbe3" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "d54d4b0b-70e3-57f0-b8bd-26362ecfbbe3",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/dev-404-page/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "bfbac0d5-64bb-5c66-9ee6-9fe758667e97" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "bfbac0d5-64bb-5c66-9ee6-9fe758667e97",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/load-babel-config/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "69fff652-b43a-5034-bf55-fe168947a840" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "69fff652-b43a-5034-bf55-fe168947a840",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/internal-data-bridge/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "c4de7c9a-8e52-5faa-a049-c02e5225bb4b" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "c4de7c9a-8e52-5faa-a049-c02e5225bb4b",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/prod-404/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "dbb34a29-961c-5105-999f-4f8cc7da475a" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "dbb34a29-961c-5105-999f-4f8cc7da475a",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/node_modules/gatsby/dist/internal-plugins/webpack-theme-component-shadowing/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "408366c7-0931-5fa4-98a2-7ed52514a903" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "408366c7-0931-5fa4-98a2-7ed52514a903",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/plugins/gatsby-plugin-stable/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "f3bf6f76-a015-5178-a2ae-d14ee8f83d77" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "f3bf6f76-a015-5178-a2ae-d14ee8f83d77",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/plugins/gatsby-plugin-independent-node/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "11301e34-63dd-5f55-be40-6f6f3e42deae" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "11301e34-63dd-5f55-be40-6f6f3e42deae",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/plugins/gatsby-source-parent-change-for-transformer/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "ff1876f4-aa5b-58a6-ad0b-84a9f8bb673a" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "ff1876f4-aa5b-58a6-ad0b-84a9f8bb673a",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/plugins/gatsby-transformer-parent-change/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "fe2aaed8-1020-5272-8d64-08ea72a5aea1" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "fe2aaed8-1020-5272-8d64-08ea72a5aea1",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/plugins/gatsby-source-child-change-for-transformer/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "d7da1f41-8df5-51b6-8486-2b93e13d5e15" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "d7da1f41-8df5-51b6-8486-2b93e13d5e15",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/plugins/gatsby-transformer-child-change/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "f1e8c9ec-44c4-528e-8600-9dbf2c1f3c8b" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "f1e8c9ec-44c4-528e-8600-9dbf2c1f3c8b",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/plugins/gatsby-source-parent-change-for-fields/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "67f79f09-33af-51bb-b6c4-b528662561a2" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "67f79f09-33af-51bb-b6c4-b528662561a2",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/plugins/gatsby-fields-parent-change/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "5b04593e-7bbd-5478-8de9-a6a15d742524" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "5b04593e-7bbd-5478-8de9-a6a15d742524",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/plugins/gatsby-source-child-change-for-fields/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "4ea4b5cf-2cad-599a-a805-ed20f20be17a" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "4ea4b5cf-2cad-599a-a805-ed20f20be17a",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/plugins/gatsby-fields-child-change/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "7374ebf2-d961-52ee-92a2-c25e7cb387a9" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "7374ebf2-d961-52ee-92a2-c25e7cb387a9",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "default-site-plugin",
    "nodeAPIs": Array [
      "onPreBootstrap",
      "onPostBootstrap",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>",
    "ssrAPIs": Array [],
  },
  "b9a44867-c35c-5ccb-bf12-af5de86cf116" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "b9a44867-c35c-5ccb-bf12-af5de86cf116",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "parent": null,
    "pluginFilepath": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "<PROJECT_ROOT>/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "Site" => Object {
    "children": Array [],
    "host": undefined,
    "id": "Site",
    "internal": Object {
      "owner": "internal-data-bridge",
      "type": "Site",
    },
    "parent": null,
    "pathPrefix": "",
    "polyfill": true,
    "port": undefined,
    "siteMetadata": Object {},
  },
  "STABLE_NODE_1" => Object {
    "children": Array [],
    "foo": "bar",
    "id": "STABLE_NODE_1",
    "internal": Object {
      "contentDigest": "0",
      "owner": "gatsby-plugin-stable",
      "type": "IndependentStable",
    },
    "parent": null,
  },
  "parent_childChangeForTransformer" => Object {
    "children": Array [
      "3b0c942e-b51f-587b-b37d-b36c5e9af8fa",
    ],
    "foo": "run-1",
    "id": "parent_childChangeForTransformer",
    "internal": Object {
      "contentDigest": "25f73a6d69ce857a76e0a2cdbc186975",
      "owner": "gatsby-source-child-change-for-transformer",
      "type": "Parent_ChildChangeForTransformer",
    },
    "parent": null,
  },
  "parent_childChangeForFields" => Object {
    "children": Array [],
    "fields": Object {
      "foo2": "baz",
    },
    "foo": "run-1",
    "id": "parent_childChangeForFields",
    "internal": Object {
      "contentDigest": "893740bfde4b8a6039e939cb0290d626",
      "fieldOwners": Object {
        "foo2": "gatsby-fields-child-change",
      },
      "owner": "gatsby-source-child-change-for-fields",
      "type": "Parent_ChildChangeForFields",
    },
    "parent": null,
  },
  "INDEPENDENT_NODE_1" => Object {
    "children": Array [],
    "foo": "baz",
    "id": "INDEPENDENT_NODE_1",
    "internal": Object {
      "contentDigest": "0",
      "owner": "gatsby-plugin-independent-node",
      "type": "IndependentChanging",
    },
    "parent": null,
  },
  "parent_parentChangeForTransformer" => Object {
    "bar": "run-2",
    "children": Array [
      "2131d29a-296c-5f73-affc-e422bec644fe",
    ],
    "id": "parent_parentChangeForTransformer",
    "internal": Object {
      "contentDigest": "4a6a70b2f8849535de50f47c609006fe",
      "owner": "gatsby-source-parent-change-for-transformer",
      "type": "Parent_ParentChangeForTransformer",
    },
    "parent": null,
  },
  "2131d29a-296c-5f73-affc-e422bec644fe" => Object {
    "bar": "run-2",
    "children": Array [],
    "foo": undefined,
    "id": "2131d29a-296c-5f73-affc-e422bec644fe",
    "internal": Object {
      "contentDigest": "a33e2263d5a5f42473e111fb400cef3d",
      "owner": "gatsby-transformer-parent-change",
      "type": "ChildOfParent_ParentChangeForTransformer",
    },
    "parent": "parent_parentChangeForTransformer",
  },
  "3b0c942e-b51f-587b-b37d-b36c5e9af8fa" => Object {
    "children": Array [],
    "foo": "baz",
    "id": "3b0c942e-b51f-587b-b37d-b36c5e9af8fa",
    "internal": Object {
      "contentDigest": "3bca2830e09b3c30b3ca76dccdaf5e8b",
      "owner": "gatsby-transformer-child-change",
      "type": "ChildOfParent_ChildChangeForTransformer",
    },
    "parent": "parent_childChangeForTransformer",
  },
  "parent_parentChangeForFields" => Object {
    "bar": "run-2",
    "children": Array [],
    "fields": Object {
      "bar": "run-2",
      "foo": undefined,
    },
    "id": "parent_parentChangeForFields",
    "internal": Object {
      "contentDigest": "72122def77d239ba36e9b9729fc53adf",
      "fieldOwners": Object {
        "bar": "gatsby-fields-parent-change",
        "foo": "gatsby-fields-parent-change",
      },
      "owner": "gatsby-source-parent-change-for-fields",
      "type": "Parent_ParentChangeForFields",
    },
    "parent": null,
  },
  "SitePage /" => Object {
    "children": Array [],
    "component": "<PROJECT_ROOT>/src/pages/index.js",
    "componentChunkName": "component---src-pages-index-js",
    "componentPath": "<PROJECT_ROOT>/src/pages/index.js",
    "context": Object {},
    "id": "SitePage /",
    "internal": Object {
      "contentDigest": "c5fa7d67d7b6095c8133348eb329bd52",
      "description": "c9535749-a52b-5c49-8671-11a311b98993",
      "owner": "internal-data-bridge",
      "type": "SitePage",
    },
    "internalComponentName": "ComponentIndex",
    "isCreatedByStatefulCreatePages": true,
    "matchPath": undefined,
    "parent": null,
    "path": "/",
    "pluginCreatorId": "c9535749-a52b-5c49-8671-11a311b98993",
    "pluginCreator___NODE": "c9535749-a52b-5c49-8671-11a311b98993",
  },
}
`;
